tests/scripts/errors/errors_empty_while.zs
// https://discord.com/channels/876899628556091432/1379668042044145745
npc script Quickknife {
    void run() {
        while (true) {
        }
    }
}
